[gd_scene load_steps=6 format=3 uid="uid://cpgw7o54vfi03"]

[ext_resource type="Script" path="res://Scripts/collectable.gd" id="1_v5y1j"]
[ext_resource type="AudioStream" uid="uid://dkuchhaxe41v2" path="res://Sounds/berry_plant_attack.wav" id="2_7l7oe"]

[sub_resource type="Animation" id="Animation_xh45n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gst6a"]
resource_name = "item_floating"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ymik"]
_data = {
"RESET": SubResource("Animation_xh45n"),
"item_floating": SubResource("Animation_gst6a")
}

[node name="Collectable" type="Area2D" groups=["Coin"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_v5y1j")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_8ymik")
}

[node name="PickUpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7l7oe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="PickUpAudio" to="." method="_on_pick_up_audio_finished"]
